--- a/src/containers/FilmHeader/FilmHeader.module.scss
+++ b/src/containers/FilmHeader/FilmHeader.module.scss
@@ -27,7 +27,7 @@
     display: flex;
 }
 .input {
-    border-radius: 10px;
+    border-radius: 5px;
     background-color: #292525;
     width: 300px;
     height: 30px;
@@ -39,4 +39,10 @@
     right: 3px;
     height: 100%;
     border-radius: 3px;
+    background: none;
+}
+.icon {
+    width: 20px;
+    color: #fff;
+
 }
