--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -3,3 +3,11 @@
     margin-left: auto;
     margin-right: auto;
 }
+.dark {
+    background-color: #000;
+    color: white;
+}
+.light {
+    color: #000;
+    background-color: white;
+}
