добавил прозрачный бакраунд на копонент filmnewstops

--- a/src/containers/FilmNewsTops/FilmNewsTops.module.scss
+++ b/src/containers/FilmNewsTops/FilmNewsTops.module.scss
@@ -3,6 +3,7 @@
     height: 581px;
     display: flex;
     justify-content: space-between;
+    background-color: transparent;
     
 }
 .cardBody {
