--- a/src/components/FilmHeader/FilmHeader.module.scss
+++ b/src/components/FilmHeader/FilmHeader.module.scss
@@ -12,13 +12,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-radius: 5px;
 }
 .logo {
     width: 50px;
     height: 53px;
 }
 .text {
-    margin-left: 20px;
+    margin: 0 20px 0 20px ;
     font-size: 30px;
     font-weight: 700;
 }
@@ -33,4 +34,11 @@
     height: 100%;
     border-radius: 3px;
     background: none;
+}
+.showDrop {
+    background-color: #4f5d73;
+}
+.showDropWhite {
+    background-color: #ebedef;
+    
 }
